--- a/html/index.pug
+++ b/html/index.pug
@@ -14,7 +14,7 @@ html(lang="en")
     title Frontend Mentor | 3-column preview card component
   body 
 
-    -var images = ["https://svgshare.com/i/_9_.svg", "https://svgshare.com/i/_96.svg", "https://svgshare.com/i/_9Z.svg"]
+    -var images = ["https://i.imgur.com/z5Q6U66.png", "https://i.imgur.com/qjXOESE.png", "https://i.imgur.com/5qFA7hs.png"]
     -var titles = ["Sedans", "Suvs", "Luxury"]
     -var sedan = ["Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city or on your next road trip."]
     -var suv = ["Take a SUV for its apacious interior, power, and versatility. Perfect for your next family vacation and off-road adventures."]
